--- a/package.json
+++ b/package.json
@@ -1,23 +1,68 @@
 {
     "name": "pwa-react-node",
     "version": "1.0.0",
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "serve": "vite preview"
+        "serve": "vite preview",
+        "update-sankhyalabs": "npm i -D --force --save-exact @sankhyalabs/core@develop @sankhyalabs/ez-design@develop @sankhyalabs/ezui@develop @sankhyalabs/sankhyablocks@develop",
+        "update-sankhyalabs-ms": "npm i -D --force --save-exact @sankhyalabs/core@milestone @sankhyalabs/ez-design@milestone @sankhyalabs/ezui@milestone @sankhyalabs/sankhyablocks@milestone",
+        "update-sankhyalabs-rc": "npm i -D --force --save-exact @sankhyalabs/core@release @sankhyalabs/ez-design@release @sankhyalabs/ezui@release @sankhyalabs/sankhyablocks@release",
+        "update-sankhyalabs-ga": "npm i -D --force --save-exact @sankhyalabs/core@latest @sankhyalabs/ez-design@latest @sankhyalabs/ezui@latest @sankhyalabs/sankhyablocks@latest"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.4",
+        "@vitejs/plugin-react": "^4.2.1",
         "dexie": "^4.0.11",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "sql.js": "^1.12.0"
+        "react-router-dom": "^7.5.1",
+        "sql.js": "^1.12.0",
+        "zustand": "^4.4.7"
     },
     "devDependencies": {
+        "@rollup/pluginutils": "^5.1.0",
+        "@sankhya-ds-mock/ds-workspace-mock": "^1.0.0",
+        "@sankhyalabs/core": "6.1.0-dev.2",
+        "@sankhyalabs/ez-design": "6.1.0-dev.1",
+        "@sankhyalabs/ezui": "6.1.0-dev.17",
+        "@sankhyalabs/sankhyablocks": "9.1.0-dev.12",
+        "@semantic-release/git": "^10.0.1",
+        "@semantic-release/gitlab": "^12.1.1",
+        "@semantic-release/npm": "^11.0.2",
+        "@stencil/core": "^4.19.2",
+        "@testing-library/jest-dom": "^6.2.0",
+        "@testing-library/react": "^14.1.2",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/node": "^20.10.5",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
+        "@types/react-router-dom": "^5.3.3",
+        "@typescript-eslint/eslint-plugin": "^6.15.0",
+        "@typescript-eslint/parser": "^6.15.0",
         "@vitejs/plugin-react": "^4.3.4",
+        "@vitest/coverage-v8": "^1.1.3",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^8.56.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "fs-extra": "^11.2.0",
+        "gulp": "^4.0.2",
+        "gulp-clean": "^0.4.0",
+        "i18next": "^23.7.16",
+        "i18next-browser-languagedetector": "^7.2.0",
+        "javascript-obfuscator": "^4.1.0",
+        "jsdom": "^23.0.1",
+        "postcss": "^8.5.3",
+        "properties-reader": "^2.3.0",
+        "react-i18next": "^14.0.0",
+        "semantic-release": "^22.0.12",
+        "tailwindcss": "^4.1.4",
+        "typescript": "^5.3.3",
         "vite": "^5.4.14",
         "vite-plugin-pwa": "^1.0.0",
+        "vitest": "^1.1.1",
         "workbox-precaching": "^7.3.0"
     }
 }
