--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
         "@tailwindcss/vite": "^4.1.4",
         "@vitejs/plugin-react": "^4.2.1",
         "dexie": "^4.0.11",
+        "env-cmd": "^10.1.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.5.1",
         "sql.js": "^1.12.0",
-        "zustand": "^4.4.7",
-        "env-cmd": "^10.1.0"
+        "zustand": "^4.4.7"
     },
     "devDependencies": {
         "@rollup/pluginutils": "^5.1.0",
@@ -49,6 +49,7 @@
         "@vitejs/plugin-react": "^4.3.4",
         "@vitest/coverage-v8": "^1.1.3",
         "autoprefixer": "^10.4.21",
+        "env-cmd": "^10.1.0",
         "eslint": "^8.56.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
@@ -68,7 +69,6 @@
         "vite": "^5.4.14",
         "vite-plugin-pwa": "^1.0.0",
         "vitest": "^1.1.1",
-        "workbox-precaching": "^7.3.0",
-        "env-cmd": "^10.1.0"
+        "workbox-precaching": "^7.3.0"
     }
 }
